--- a/index.html
+++ b/index.html
@@ -28,62 +28,61 @@
 
     <main>
         <figure class="hero"></figure>
-        <div class="content">
-            <div class="search-engine-optimization">
-                <img src="./assets/images/search-engine-optimization.jpg" class="float-left" />
+        <section class="content">
+            <figure id="search-engine-optimization">
+                <img src="./assets/images/search-engine-optimization.jpg" alt="Desk with computer, notebook, coffee, markers and magnifying glass" class="float-left" />
                 <h2>Search Engine Optimization</h2>
                 <p>
                     The dominance of mobile internet use means that users are searching for the right business as they travel, shop, or sit on their couch at home. Search Engine Optimization (SEO) allows you to increase your visibility and find the right customers for your business.
                 </p>
-            </div>
-            <div id="online-reputation-management" class="online-reputation-management">
-                <img src="./assets/images/online-reputation-management.jpg" class="float-right" />
+            </figure>
+            <figure id="online-reputation-management" >
+                <img src="./assets/images/online-reputation-management.jpg" alt="Computer screen showing results of an online research of company reputation" class="float-right" />
                 <h2>Online Reputation Management</h2>
                 <p>
                     The web is full of opinions, and some of these can be negative. Social media allows anyone with an internet connection to say whatever they want about your business. Online Reputation Management gives you the control over what potential customers see when they search for your business.
-                </p>
-            </div>
-            <div id="social-media-marketing" class="social-media-marketing">
-                <img src="./assets/images/social-media-marketing.jpg" class="float-left" />
+                <pn>
+            </figure>
+            <figure id="social-media-marketing" >
+                <img src="./assets/images/social-media-marketing.jpg" alt="Multiple icons representing actions performed on and thins associated with social media sites" class="float-left" />
                 <h2>Social Media Marketing</h2>
                 <p>
                     Social media continues to have a sizable influence on buying habits. Social media marketing helps you determine which platforms are suited to your brand, using analytics to find the right markets and increase your lead generation.
                 </p>
-            </div>
-        </div>
+            </figure>
+        </section>
 
-
-        <div class="benefits">
-            <div class="benefit-lead">
+        <section class="benefits">
+            <figure class="benefit-lead">
                 <h3>Lead Generation</h3>
-                <img src="./assets/images/lead-generation.png" />
+                <img src="./assets/images/lead-generation.png" alt="Sprocket above funnel that leads to symbol for money" />
                 <p>
                     Inbound strategies for lead generation require less work for your business, bringing customers directly to your website.
                 </p>
-            </div>
-            <div class="benefit-brand">
+            </figure>
+            <figure class="benefit-brand">
                 <h3>Brand Awareness</h3>
-                <img src="./assets/images/brand-awareness.png" />
+                <img src="./assets/images/brand-awareness.png" alt="Torso with shining light bulb as its head" />
                 <p>
                     Users find your business through paid and organic searches, increasing the search ranking and visibility for your business.
                 </p>
-            </div>
-            <div class="benefit-cost">
+            </figure>
+            <figure class="benefit-cost">
                 <h3>Cost Management</h3>
-                <img src="./assets/images/cost-management.png" />
+                <img src="./assets/images/cost-management.png" alt="Sprocket with three dollars signs in front of its lower section" />
                 <p>
                     As the search ranking for your business increases, your advertising costs decrease, and you no longer need to advertise your page.
                 </p>
-            </div>
-        </div>
+            </figure>
+        </section>
     </main>
 
-    <div class="footer">
+    <footer class="footer">
         <h2>Made with ❤️️ by Horiseon</h2>
         <p>
             &copy; 2019 Horiseon Social Solution Services, Inc.
         </p>
-    </div>
+    </footer>
 </body>
 
 </html>
